UI fixes for Dark Mode (issue #110)
- Also: Added outline around focused buttons and menu buttons to improve accessibility

--- a/src/style/laf.css
+++ b/src/style/laf.css
@@ -110,6 +110,7 @@ body[data-laf="true"]:not([data-os="mac"]) select.browser-style {
     padding-inline-end: 24px;
     border-radius: 0;
     background-color: var(--color-btn-bkgd);
+    color: var(--color-btn-text);
 }
 
 body[data-laf="true"][data-os="mac"] select.browser-style {
@@ -140,6 +141,7 @@ body[data-laf="true"]:not([data-os="mac"]) button:not(.ae-button):not(.toolbar-b
     transition-property: box-shadow, border;
     border-radius: 3px;
     background-color: var(--color-btn-bkgd);
+    color: var(--color-btn-text);
 }
 
 body[data-os="mac"] button:not(.ae-button):not(.toolbar-button),
@@ -205,8 +207,8 @@ body[data-os="mac"] button.default:active:not(.ae-button):not(.toolbar-button) {
     border: 0.5px solid #2F7FFF;
 }
 
-select.browser-style:focus,
-select.browser-style:focus > option {
+body[data-laf="true"] select.browser-style:focus,
+body[data-laf="true"] select.browser-style:focus > option {
     color: var(--color-btn-text);
 }
 
@@ -262,6 +264,13 @@ input[type="password"]::selection,
 input[type="search"]::selection,
 textarea::selection {
     background-color: var(--color-tb-selection);
+}
+
+body[data-laf="true"] button:-moz-focusring:not(:disabled),
+body[data-laf="true"] select:-moz-focusring:not([size]):not(:disabled),
+body[data-laf="true"] select.browser-style:-moz-focusring:not([size]):not(:disabled) {
+    border-color: var(--color-bkgd) !important;
+    box-shadow: 0 0 0 2px #61b5ffbf !important;
 }
 
 body[data-laf="true"] .browser-style > input[type="checkbox"] {
